# project_voidMarch

./: .gitattributes  .gitignore  CMakeLists.txt  README.md
.github/workflows/: ci.yml  cpp-multi.code-workspace
assets/levels/: level1.txt  level2.txt
build-windows/: .ninja_deps  .ninja_log  build.ninja  cmake_install.cmake
game_index/: Sbuttons.h  Sbuttons.hpp  game.cpp  game_inputs.cpp  loadGame.hpp  main.cpp  main_select.h  player_stats.hpp  select.cpp  voidmarch.cpp
game_index/game_logic/: enemy_logic.cpp  game.cpp  game_inputs.cpp  on_screen.cpp  player_event_handler.cpp
game_index/game_logic/inventory/: inventory.hpp  melee_bindings.cpp  melee_bindings.hpp  sector_hit.hpp  weapon.hpp
game_index/game_logic/items/: items.cpp  items.hpp
game_index/game_logic/systems/combat/: combat.hpp  enemyColl.hpp  projectiles.cpp  projectiles.hpp
game_index/game_logic/systems/inventory/: inventory.hpp  weapon.hpp  weapon_factory.hpp
game_index/game_logic/systems/math/: ahl_math.hpp
game_index/include/: Sbuttons.hpp
game_index/include/data/: player_data.hpp
game_index/include/data/json_helpers/: data_communicator.hpp  load_save.hpp
game_index/include/data/nlohmann/: json.hpp
game_index/include/data/stats/: player.hpp  player_data.hpp  stats_io.hpp  world.hpp
game_index/include/game/: ability_attributes.hpp  enemy_data.hpp  game_state.hpp  global_player.hpp  loadGame.hpp  player_data.hpp  player_stats.hpp
game_index/include/global/: constants.hpp  scale.hpp  scale_system.hpp  scale_utils.hpp
game_index/include/screen_load/: home_screen.hpp  screen_constants.hpp  select_main.hpp
game_index/include/select/: Sbuttons.hpp  main_select.h
game_index/include/standardUI/: button.hpp  globalC.hpp  manager.hpp  ui_helpers.hpp
game_index/save/: player.json  world.json
game_index/screen_logic/: home_screen.cpp  level_select.cpp  select.cpp
game_index/select_logic/: home_screen.cpp  select.cpp
include/: math_core.h
math_core/: Cargo.toml
math_core/src/: lib.rs
rust/: Cargo.toml
